Preparing for AoC 2022

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,5 @@
 
 [flake8]
 docstring-convention = google
-exclude = archive
-ignore = ANN101,ANN102,ANN401,W503,SIM102,SIM106,SIM117,DUO138,TH100,T003,FS003
+ignore = ANN101,ANN102,W503
 max_line_length = 79
