--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 -  repo: https://github.com/PyCQA/pylint
-   rev: v2.11.1
+   rev: v2.15.7
    hooks:
    - id: pylint
      additional_dependencies: [numpy, bitarray]
@@ -27,29 +27,29 @@ repos:
    hooks:
    - id: flake8
      additional_dependencies: [# cohesion,
-                               dlint==0.10.2,
-                               flake8-2020==1.6.0,
+                               # dlint==0.10.2,
+                               # flake8-2020==1.7.0,
                                # flake8-adjustable-complexity,
                                # flake8-alfred==v1.0.2,
-                               flake8-annotations==2.7.0,
+                               flake8-annotations==2.9.1,
                                flake8-assert-msg==1.1.1,
-                               flake8-assertive==1.3.0,
+                               flake8-assertive==2.1.0,
                                # flake8-bandit,
                                flake8-blind-except==0.2.0,
                                # flake8-broken-line,
-                               flake8-builtins==1.5.3,
-                               flake8-bugbear==21.9.2,
+                               flake8-builtins==2.0.1,
+                               flake8-bugbear==22.10.27,
                                # flake8-class-attributes-order,
                                flake8-coding==1.3.2,
                                # flake8-commas,
                                # flake8-cognitive-complexity,
-                               flake8-comprehensions==3.7.0,
+                               flake8-comprehensions==3.10.1,
                                # flake8-comments,
                                # flake8-complex-f-strings,
-                               flake8-copyright==0.2.2,
+                               flake8-copyright==0.2.3,
                                # flake8-datetimez,
-                               flake8-debugger==4.0.0,
-                               # flake8-deprecated==1.3,
+                               flake8-debugger==4.1.2,
+                               flake8-deprecated==2.0.1,
                                flake8-docstrings==1.6.0,
                                # flake8-dunder-all,
                                flake8-encodings==0.4.0,
@@ -71,14 +71,14 @@ repos:
                                flake8-printf-formatting==1.1.2,
                                flake8-quotes==3.3.1,
                                flake8-raise==0.0.5,
-                               flake8-requirements==1.5.1,
+                               flake8-requirements==1.7.5,
                                # flake8-requests==0.4.0,
                                # flake8-return,
                                flake8-rst==0.8.0,
                                # flake8-rst-docparams,
                                # flake8-rst-docstrings,
                                flake8-secure-coding-standard==1.2.1,
-                               flake8-simplify==0.14.2,
+                               flake8-simplify==0.19.3,
                                flake8-sphinx-links==0.2.1,
                                flake8-strftime==0.3.2,
                                # flake8-strict,
@@ -98,7 +98,7 @@ repos:
                                # tryceratops
                                ]
      args: [--ignore,
-            "ANN101,ANN102,W503,W504,SIM102,SIM106,SIM117,DUO123,DUO138,TH100,T003,FS003",
+            "ANN101,ANN102,W503",
             --max-line-length, "79",
             --doctests,
             # flake8-docstrings
